Fix missing border rendering issue

--- a/src/components/20-molecules/datepicker/index.scss
+++ b/src/components/20-molecules/datepicker/index.scss
@@ -31,7 +31,7 @@
     display: flex;
     margin-bottom: 1px;
     border: solid 1px $color-prim-gray-mercury;
-    width: 195px;
+    width: 197px;
   }
 
   &__input-button {
